Rename the layer- element to map-layer

--- a/static/demo/Tutorial/Getting Started/index.html
+++ b/static/demo/Tutorial/Getting Started/index.html
@@ -6,7 +6,7 @@
       <body>
          <p>Web <s>pages</s> maps are easy-peasy</p>
          <mapml-viewer projection="OSMTILE" zoom="2" lat="67.6" lon="-100.9" width="400" height="300" controls>
-             <layer- src="https://maps4html.org/web-map-doc/demo/data/osm.mapml" label="Open Street Map" checked ></layer->
+             <map-layer src="https://maps4html.org/web-map-doc/demo/data/osm.mapml" label="Open Street Map" checked ></map-layer>
          </mapml-viewer>
       </body>
 </html>
