--- a/static/demo/map-a-demo/index.html
+++ b/static/demo/map-a-demo/index.html
@@ -32,9 +32,9 @@
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="10" lon="-75.7" lat="45.4" controls="">
-  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
+  <map-layer label="OpenStreetMap" src="../data/osm.mapml" checked></map-layer>
 
-  <layer- label="Polygon" checked>
+  <map-layer label="Polygon" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature min="10" max="11">
       <map-featurecaption>Click me!</map-featurecaption>
@@ -47,9 +47,9 @@
       </map-geometry>
       <map-properties></map-properties>
     </map-feature>
-  </layer->
+  </map-layer>
 
-  <layer- label="Points" checked>
+  <map-layer label="Points" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature min="14" max="24">
       <map-featurecaption>Point 1</map-featurecaption>
@@ -78,7 +78,7 @@
       </map-geometry>
       <map-properties></map-properties>
     </map-feature>
-  </layer->
+  </map-layer>
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
