--- a/static/demo/map-caption-demo/index.html
+++ b/static/demo/map-caption-demo/index.html
@@ -33,7 +33,7 @@
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="1" lat="60.0" lon="-100.0" controls>
   <map-caption>Example captioned map - Exemple de carte légendée</map-caption>
-  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
+  <map-layer label="OpenStreetMap" src="../data/osm.mapml" checked></map-layer>
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
