--- a/static/demo/map-style-demo/index.html
+++ b/static/demo/map-style-demo/index.html
@@ -32,8 +32,8 @@
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="15" lon="-75.7" lat="45.42" controls="">
-  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
-  <layer- label="Points" checked>
+  <map-layer label="OpenStreetMap" src="../data/osm.mapml" checked></map-layer>
+  <map-layer label="Points" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature>
       <!-- Setting the geometry coordinates to gcrs, as the default is pcrs -->
@@ -52,7 +52,7 @@
       </map-geometry>
     </map-feature>
     <map-style>.class1{stroke: #73A9AD;stroke-width: 4px;fill: none;fill-opacity: 1;} .class2{stroke: #000000;stroke-width: 2px;fill: #6b6a6a;fill-opacity: 1;} .class3{stroke: #5392bd;fill: #5392bd;fill-opacity: 0.7;}</map-style>
-  </layer->
+  </map-layer>
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
