--- a/static/demo/mapml-demo/index.html
+++ b/static/demo/mapml-demo/index.html
@@ -32,7 +32,7 @@
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="1" lat="60.0" lon="-100.0" controls>
-  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
+  <map-layer label="OpenStreetMap" src="../data/osm.mapml" checked></map-layer>
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
