--- a/static/demo/sandbox/index.html
+++ b/static/demo/sandbox/index.html
@@ -31,9 +31,9 @@
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="0" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="10" lon="-75.7" lat="45.4" controls>
-  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
+  <map-layer label="OpenStreetMap" src="../data/osm.mapml" checked></map-layer>
 
-  <layer- label="Features" checked>
+  <map-layer label="Features" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature>
       <map-featurecaption>Polygon</map-featurecaption>
@@ -67,7 +67,7 @@
       </map-geometry>
       <map-properties><h2>This is a Point</h2></map-properties>
     </map-feature>
-  </layer->
+  </map-layer>
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
