--- a/static/demo/map-input-demo/index.html
+++ b/static/demo/map-input-demo/index.html
@@ -32,7 +32,7 @@
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="CBMTILE" lat="60" lon="-95" zoom="2" controls>
-    <layer- label="Toporama" checked>
+    <map-layer label="Toporama" checked>
       <map-extent units="CBMTILE" checked hidden>
         <!-- width and height inputs capture the dimensions of the map in pixels -->
         <!-- width and height parameters are required by many types of map service -->
@@ -47,8 +47,8 @@
         <map-input name="ymax" type="location" units="pcrs" position="top-left" axis="northing" min="-927808" max="7928344"></map-input>
         <map-link rel="image" tref="https://maps.geogratis.gc.ca/wms/toporama_en?SERVICE=WMS&REQUEST=GetMap&FORMAT=image/jpeg&TRANSPARENT=FALSE&STYLES=&VERSION=1.3.0&LAYERS=WMS-Toporama&WIDTH={w}&HEIGHT={h}&CRS=EPSG:3978&BBOX={xmin},{ymin},{xmax},{ymax}"></map-link>
       </map-extent>
-    </layer->
-    <layer- label="Canada Base Map Tiles">
+    </map-layer>
+    <map-layer label="Canada Base Map Tiles">
       <map-extent units="CBMTILE" checked hidden>
         <!-- the zoom input is required for accessing tile caches -->
         <map-input name="z" type="zoom" value="17" min="0" max="17"></map-input>
@@ -60,7 +60,7 @@
         <map-input name="x" type="location" units="tilematrix" axis="column" min="26484" max="32463"></map-input>
         <map-link rel="tile" tref="https://geoappext.nrcan.gc.ca/arcgis/rest/services/BaseMaps/CBMT3978/MapServer/tile/{z}/{y}/{x}?m4h=t"></map-link>
       </map-extent>
-    </layer->
+    </map-layer>
 </mapml-viewer>
         </textarea>
     </div>
