--- a/static/demo/map-link-demo/index.html
+++ b/static/demo/map-link-demo/index.html
@@ -32,8 +32,8 @@
         <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="1" lat="60.0" lon="-100.0" controls>
-  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
-  <layer- label="Ottawa" checked>
+  <map-layer label="OpenStreetMap" src="../data/osm.mapml" checked></map-layer>
+  <map-layer label="Ottawa" checked>
     <map-link rel="license" title="Copyright FooBar Inc."></map-link>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-feature>
@@ -45,7 +45,7 @@
         </map-point>
       </map-geometry>
     </map-feature>
-  </layer->
+  </map-layer>
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
