--- a/static/demo/map-properties-demo/index.html
+++ b/static/demo/map-properties-demo/index.html
@@ -32,8 +32,8 @@
       <!------------------------------------------------- CHANGE THIS ------------------------------------------------->
         <textarea rows="10" style="width:100%" id="htmlEditor">
 <mapml-viewer projection="OSMTILE" zoom="12" lat="45.42" lon="-75.70">
-  <layer- label="OpenStreetMap" src="../data/osm.mapml" checked></layer->
-  <layer- label="Ottawa" checked>
+  <map-layer label="OpenStreetMap" src="../data/osm.mapml" checked></map-layer>
+  <map-layer label="Ottawa" checked>
     <map-meta name="projection" content="OSMTILE"></map-meta>
     <map-meta name="cs" content="gcrs"></map-meta>
     <map-feature>
@@ -45,7 +45,7 @@
       </map-geometry>
       <map-properties><h1>This is a simple Popup</h1></map-properties>
     </map-feature>
-  </layer->
+  </map-layer>
 </mapml-viewer></textarea>
     </div>
     <div class="tabcontent" id="CSS">
